force-app/main/default/objects/Apttus__WizardRuntimeInput__c/Apttus__WizardRuntimeInput__c.object-meta.xml
<CustomObject>
    <description>Input Control instance within a runtime wizard</description>
    <label>Wizard Runtime Input</label>
    <nameField>
        <label>Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Runtime Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>