force-app/main/default/objects/Apttus__WizardRuntimeInput__c/fields/Apttus__Comments__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Comments__c</fullName>
    <description>Holds comments entered for this input</description>
    <inlineHelpText>Holds comments entered for this input</inlineHelpText>
    <label>Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>