force-app/main/default/objects/Apttus__WizardRuntimeInput__c/fields/Apttus__Enabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the input control is enabled</description>
    <inlineHelpText>Indicates whether the input control is enabled</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>