force-app/main/default/objects/Apttus__WizardRuntimeInput__c/fields/Apttus__InputRepeatSequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus__InputRepeatSequence__c</fullName>
    <description>Repeat sequence of the input when the inputs are grouped within a step, otherwise 0</description>
    <inlineHelpText>Repeat sequence of the input when the inputs are grouped within a step, otherwise 0</inlineHelpText>
    <label>Input Repeat Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>