force-app/main/default/objects/Apttus__WizardRuntimeInput__c/fields/Apttus__ResponseValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ResponseValue__c</fullName>
    <description>User response for this input</description>
    <inlineHelpText>User response for this input</inlineHelpText>
    <label>Response Value</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>