force-app/main/default/objects/Apttus__WizardRuntimeInput__c/fields/Apttus__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Sequence__c</fullName>
    <description>Indicates the sequence of the input</description>
    <inlineHelpText>Indicates the sequence of the input</inlineHelpText>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>