force-app/main/default/objects/Apttus__WizardRuntimeInput__c/fields/Apttus__Shown__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Shown__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the input control is shown</description>
    <inlineHelpText>Indicates whether the input control is shown</inlineHelpText>
    <label>Shown</label>
    <type>Checkbox</type>
</CustomField>