force-app/main/default/objects/Apttus__WizardRuntimeInput__c/fields/Apttus__WizardId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardId__c</fullName>
    <description>Master-detail to the wizard instance</description>
    <inlineHelpText>Master-detail to the wizard instance</inlineHelpText>
    <label>Wizard</label>
    <referenceTo>Apttus__Wizard2__c</referenceTo>
    <relationshipLabel>Runtime Inputs</relationshipLabel>
    <relationshipName>RuntimeInputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>