force-app/main/default/objects/Apttus__WizardRuntimeInput__c/fields/Apttus__WizardInputControlId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardInputControlId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the wizard input control design element</description>
    <inlineHelpText>Lookup to the wizard input control design element</inlineHelpText>
    <label>Wizard Input Control</label>
    <referenceTo>Apttus__WizardInputControl2__c</referenceTo>
    <relationshipLabel>Runtime Inputs</relationshipLabel>
    <relationshipName>RuntimeInputs</relationshipName>
    <type>Lookup</type>
</CustomField>