force-app/main/default/objects/Apttus__WizardRuntimeInput__c/fields/Apttus__WizardStepId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardStepId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the wizard step design element</description>
    <inlineHelpText>Lookup to the wizard step design element</inlineHelpText>
    <label>Wizard Step</label>
    <referenceTo>Apttus__WizardStep2__c</referenceTo>
    <relationshipLabel>Runtime Inputs</relationshipLabel>
    <relationshipName>RuntimeInputs</relationshipName>
    <type>Lookup</type>
</CustomField>